@@ -2,12 +2,16 @@ package org.example.application.service;
 
 import org.example.adapter.out.service.basket.Basket;
 import org.example.adapter.out.service.basket.BasketServiceAdapter;
-import org.example.adapter.out.service.product.Product;
 import org.example.adapter.out.service.product.ProductServiceAdapter;
+import org.example.application.port.in.command.SuggestCommand;
+import org.example.application.port.out.GetBasketPort;
+import org.example.application.port.out.GetProductPort;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.util.ArrayList;
@@ -15,12 +19,9 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.*;
 
 @SpringBootTest
 @ActiveProfiles("test")
@@ -30,31 +31,38 @@ class FindSuggestServiceTest {
     @Mock
     private BasketServiceAdapter basketServiceAdapter;
 
+    @MockBean
+    private GetProductPort getProductPort;
     @Mock
     private ProductServiceAdapter productServiceAdapter;
+    @MockBean
+    private  GetBasketPort getBasketPort;
 
-    @Mock
+    @Autowired
     private FindSuggestService findSuggestService;
 
 
     @DisplayName("유저의 장바구니 목록을 조회하여, 상품명 기반으로 상품을 추천한다.")
     @Test
     void findSuggestProduct() {
-
+       //given
         List<Basket> basketList = new ArrayList<>();
         for(int i = 1; i <= 3 ;i++){
             basketList.add(createBasket(i));
         }
+        when(getBasketPort.getBasket()).thenReturn(basketList);
 
-        when(basketServiceAdapter.getBasket())
-                .thenReturn(basketList);
-        when(productServiceAdapter.getProductName(Arrays.asList(1L,2L,3L)))
-                .thenReturn(Arrays.asList("nike 신발","adidas 신발"));
+        List<String> productBrandNames = List.of("adidas");
+        when(getProductPort.getProductBrandName(anyList())).thenReturn(productBrandNames);
+
+        SuggestCommand suggestCommand = new SuggestCommand(1L);
+
+        // when: findSuggestProduct 메서드 호출
+        Map<String, Object> result = findSuggestService.findSuggestProduct(suggestCommand);
 
 
-        when(findSuggestService.findSuggestProduct(any()))
-                .thenReturn(Map.of("test","test"));
 
+        //then
 
     }
 
